# impossible-ma

./: .env.example  .gitignore  CITATION.cff  E156-PROTOCOL.md  LICENSE  README.md  REVIEW.md  REVIEW_PLAN2.md  REVIEW_PLAN3.md  REVIEW_PLAN4.md  REVIEW_v0.1.1.md  impossible-ma.html  impossible-ma.html.template  index.html  pyproject.toml
experiments/: README.md  _pool.py  compare.py  comparison.md  cross_framing.py  disconnected_nma.py  era_collision.py  extreme_het.py  pilot_envelope.py
experiments/fixtures/: cross_framing.json  disconnected_nma.json  era_collision.json  extreme_het.json
experiments/tests/: test_compare.py  test_cross_framing.py  test_disconnected_nma.py  test_era_collision.py  test_extreme_het.py  test_pilot_envelope.py  test_pool.py
paper/: AUTHORS.md  bmj_methods.md  e156.md  f1000.md  refs.bib
r_scripts/: kone_parity_metafor.R  missing_se_parity.R
scripts/: build_html.py  diag_pyodide.py  export_figures.py  gen_figure_corpus.py  headline_output.json  headline_run.py  preflight.py  preflight_html.py
src/impossible_ma/: __init__.py  _pool.py  adversarial.py  cli.py  envelope.py  kone.py  metaaudit_adapter.py  metaaudit_classifier.py  missing_se.py  (+1 more)
tests/: conftest.py  test_adversarial.py  test_adversarial_properties.py  test_envelope_contract.py  test_kone.py  test_kone_r_parity.py  test_metaaudit_adapter.py  test_metaaudit_classifier.py  test_missing_se.py  test_missing_se_figure.py  test_missing_se_r_parity.py  test_pool.py  test_truthcert.py  test_ui.py
truth-recovery/: REPORT.md  dgp_k1.py  harness.py  test_truth_recovery.py
(+28 files in other folders)
