[project]
name = "impossible-ma"
version = "0.1.1"
description = "Synthesize the previously unsynthesizable: k=1, missing-SE, adversarial meta-analysis"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pandas>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "hypothesis>=6.100"]

[project.scripts]
impossible-ma = "impossible_ma.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
